# xdelta-rs

./: Cargo.toml
xdelta-sys/: Cargo.toml  LICENSE-MIT  build.rs  lib.rs
